tests-e2e/tests/snapshots/cli__help_lsp.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Run the language server over standard input and output.

Usage: iris lsp [FLAGS]

Flags:
      --stdio                 Use standard input and output for LSP transport.
      --query-log <LEVEL>     Log level for the query engine.
                              [possible values: off, error, warn, info, debug, trace]
                              (default: off)
      --checking-log <LEVEL>  Log level for the type checker.
                              [possible values: off, error, warn, info, debug, trace]
                              (default: off)
      --lsp-log <LEVEL>       Log level for the language server.
                              [possible values: off, error, warn, info, debug, trace]
                              (default: info)
  -h, --help                  Print help
--- stderr
