tests-e2e/tests/snapshots/cli__help_root.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
iris [version]
PureScript compiler command-line interface.

Usage: iris <SUBCOMMAND>

Commands:
  add     Add dependencies to a Spago package.
  build   Build a Spago workspace or package.
  format  Format PureScript source files.
  lsp     Run the language server over standard input and output.
  new     Create a Spago project in the current directory.
  run     Build and run a Spago package with Node.js.
  skills  Print agent skills for using Iris, which match this version.
  test    Build and test one or more Spago packages with Node.js.
  watch   Build a Spago workspace or package and rebuild when inputs change.
  help    Print this message or the help of the given subcommand(s)

Flags:
  -h, --help     Print help
  -V, --version  Print version
--- stderr
