tests-e2e/tests/snapshots/cli__help_run.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Build and run a Spago package with Node.js.

Usage: iris run [FLAGS] [-- ARGUMENTS]…

Arguments:
  [-- ARGUMENTS]…  Arguments passed to the program.

Flags:
  -p, --package <NAME>  Workspace package to build.
  -o, --output <DIR>    Output directory. Defaults to output in the workspace root.
  -q, --quiet           Suppress build progress and Spago output.
      --color <COLOR>   When to use colors in diagnostics and progress output.
                        [possible values: auto, always, never]
                        (default: auto)
      --main <MODULE>   Module containing the program entry point.
  -h, --help            Print help
--- stderr
