tests-e2e/tests/snapshots/cli__help_skills.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Print agent skills for using Iris, which match this version.

Usage: iris skills [SUBCOMMAND]

Commands:
  get   Print a skill.
  list  List the skills with their descriptions. This is the default.
  help  Print this message or the help of the given subcommand(s)

Flags:
  -h, --help  Print help
--- stderr
