tests-e2e/tests/snapshots/cli__help_test.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Build and test one or more Spago packages with Node.js.

Usage: iris test [FLAGS] [-- ARGUMENTS]…

Arguments:
  [-- ARGUMENTS]…  Arguments passed to each test program.

Flags:
  -p, --package <NAME>  Workspace package to build.
  -o, --output <DIR>    Output directory. Defaults to output in the workspace root.
  -q, --quiet           Suppress build progress and Spago output.
      --color <COLOR>   When to use colors in diagnostics and progress output.
                        [possible values: auto, always, never]
                        (default: auto)
      --main <MODULE>   Module containing the test entry point.
  -h, --help            Print help
--- stderr
