tests-e2e/tests/snapshots/cli__help_watch.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Build a Spago workspace or package and rebuild when inputs change.

Usage: iris watch [FLAGS] [SUBCOMMAND]

Commands:
  query  Ask a running `iris watch` about the project.
  help   Print this message or the help of the given subcommand(s)

Flags:
  -p, --package <NAME>  Workspace package to build.
  -o, --output <DIR>    Output directory. Defaults to output in the workspace root.
  -q, --quiet           Suppress watch summaries and Spago output.
      --color <COLOR>   When to use colors in diagnostics and watch output.
                        [possible values: auto, always, never]
                        (default: auto)
      --no-diagnostics  Suppress compiler warnings and errors without hiding watch summaries.
  -h, --help            Print help
--- stderr
