tests-e2e/tests/snapshots/cli__help_watch_query.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Ask a running `iris watch` about the project.

Usage: iris watch query [-o --output <DIR>] [--json] <SUBCOMMAND>

Commands:
  definition   Print where a value, type, or class is declared.
  dependents   Print the modules that import a module, directly or through other modules.
  diagnostics  Print the diagnostics of one module, or of every module.
  instances    Print the instances of a class, or the instances whose head mentions a type.
  javascript   Print the JavaScript generated for a module.
  module       Print a module's exports with their signatures and documentation.
  references   Print where a value, type, or class is used.
  search       Print the declarations whose names match a pattern, best matches first.
  signature    Print the signature of a value, or the kind of a type or class.
  wait         Rescan sources, rebuild if anything changed, and report the build outcome.
  help         Print this message or the help of the given subcommand(s)

Flags:
  -o, --output <DIR>  Output directory of the watcher. Defaults to output in the workspace root.
      --json          Print the watcher's response as JSON.
  -h, --help          Print help
--- stderr
