tests-e2e/tests/snapshots/cli__rejects_compile.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: unrecognized subcommand 'compile'

Usage: iris <SUBCOMMAND>

For more information, try '--help'.
