tests-e2e/tests/snapshots/cli__rejects_docs.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: unrecognized subcommand 'docs'

Usage: iris <SUBCOMMAND>

For more information, try '--help'.
