tests-e2e/tests/snapshots/cli__rejects_lsp_config.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: unexpected argument '--config' found

Usage: iris lsp [FLAGS]

For more information, try '--help'.
